[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=25.3",
    "spacy>=3.8.8",
]

# Tell setuptools to install the package that lives in ./rag_search_engine
[tool.setuptools.packages.find]
where = ["."] #top level, if project is moved into src/ later change this
include = ["rag_search_engine*"]   # <-- this is the key bit

[project.scripts]
rag-search = "rag_search_engine.cli.cli:main"
